turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:6: error: type mismatch;
 found   : Int
 required: java.awt.Color
       setCouleurBrosse(rule(state)(c)(1));
                                      ^